inf theory functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,10 @@ export(avg_mean)
 export(correlation)
 export(covariance)
 export(dot_product)
+export(entropy)
+export(ppmi)
+export(relative_entropy)
 export(standard_deviation)
+export(tfidf)
 export(variance)
 export(zscore)
