--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,8 @@ Description: Supports the course Mathematics for Shakespeare.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
+Imports:
+    katex,
+    Matrix
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
